[package]
name = "rust_hw_2"
version = "0.1.0"
authors = ["jraypdx <44383003+jraypdx@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
glass_pumpkin = "0.3.3"
num-bigint = "0.2.6"
